# scsim

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  scsim  setup.py
.github/workflows/: release.yml
examples/: tree-example.nwk
scsim/: __init__.py  node.py  scsim.py  tree.py  util.py
src/: scsim.cpp
