[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scsim"     
dynamic = ["version"]     
description = "Simulator for single-cell DNA sequencing data"
readme = "README.md" 
requires-python = ">=3.6" 
license = { text = "GPL3" }
authors = [
    { name = "Haotian Zhang", email = "haotianzh@uconn.edu" },
    { name = "Yufeng Wu", email = "yufeng.wu@uconn.edu" }
]
keywords = ["cell lineage tree", "simulator", "single-cell DNA sequencing", "SNV", "CNA"]

dependencies = [
    'numpy',
]

[tool.setuptools.dynamic]
version = {attr = "scsim.__version__"}

[tool.cibuildwheel]
# Only build for Python 3.10 and higher (adjust as needed)
build = "cp36-* cp37-* cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"

# Skip 32-bit builds and PyPy to save CI time
skip = "*-win32 pp*"

# --- LINUX BUILD ---
[tool.cibuildwheel.linux]
# 1. Install g++
before-all = "yum install -y gcc-c++"
# 2. Create the bin directory
# 3. Compile directly into the package folder
before-build = """
mkdir -p scsim/bin && \
g++ src/scsim.cpp -O3 -o scsim/bin/scsim
"""

# --- MACOS BUILD ---
[tool.cibuildwheel.macos]
before-build = """
mkdir -p scsim/bin && \
clang++ src/scsim.cpp -O3 -o scsim/bin/scsim
"""

# --- WINDOWS BUILD ---
[tool.cibuildwheel.windows]
# Windows uses 'cl' (MSVC compiler).
# /Fe: specifies the output filename (Must be .exe)
before-build = """
mkdir scsim\\bin & \
cl src/scsim.cpp /O2 /Fe:scsim/bin/scsim.exe
"""

[project.urls]
Homepage = "https://github.com/haotianzh/scsim"
"Bug Tracker" = "https://github.com/haotianzh/scsim/issues"