[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scsim"     
dynamic = ["version"]     
description = "Simulator for single-cell DNA sequencing data"
readme = "README.md" 
requires-python = ">=3.8" 
license = { text = "GPL3" }
authors = [
    { name = "Haotian Zhang", email = "haotianzh@uconn.edu" },
    { name = "Yufeng Wu", email = "yufeng.wu@uconn.edu" }
]
keywords = ["cell lineage tree", "simulator", "single-cell DNA sequencing", "SNV", "CNA"]

dependencies = [
    'numpy',
]

[tool.setuptools.dynamic]
version = {attr = "scsim.__version__"}

[tool.cibuildwheel]
skip = "*-win32 pp*"

# --- LINUX BUILD ---
[tool.cibuildwheel.linux]
before-build = """
mkdir -p scsim/bin && \
g++ src/scsim.cpp -O3 -o scsim/bin/scsim
"""

# --- MACOS BUILD ---
[tool.cibuildwheel.macos]
before-build = """
mkdir -p scsim/bin && \
clang++ src/scsim.cpp -O3 -o scsim/bin/scsim
"""

# --- WINDOWS BUILD ---
[tool.cibuildwheel.windows]
before-build = """
mkdir scsim\\bin & \
cl src/scsim.cpp /O2 /Fe:scsim/bin/scsim.exe
"""

[project.urls]
Homepage = "https://github.com/haotianzh/scsim"
"Bug Tracker" = "https://github.com/haotianzh/scsim/issues"